Lots of changes this time.
+ Proper pagination of all index pages
+ Indieweb microformats
+ Template for Pages
+ Template for some of my own local frontmatter
o Fixed the Flexbox display - thanks to http://the-echoplex.net/flexyboxes/

--- a/layouts/article/single.html
+++ b/layouts/article/single.html
@@ -6,8 +6,14 @@
 		<article class="h-entry">
 		  <h1 class="p-name">{{ .Title }}</h1>
 		  {{ partial "metadata.html" . }}
-		  <div class="e-content"
+		  {{- if .Params.summary }}
+		  <div class="floatright p-summary">
+		  {{ .Params.summary }}
+		  </div>
+		  {{- end }}
+		  <div class="e-content">
 		  {{ .Content }}
+		  </div>
 		</article>
 		
 {{ partial "articlepagination.html" . }}
