--- a/layouts/section/micro.html
+++ b/layouts/section/micro.html
@@ -4,12 +4,16 @@
 	  <h1><svg class="icon icon-power">
 				<use xlink:href="{{ .Site.BaseURL }}svg/symbol-defs.svg#icon-power"></use>
 			</svg>microblog</h1>
-	  {{- range where .Site.Pages "Section" "micro" }}
-	  <div class="e-content p-title">
-	    {{- .Content }}
-	  </div>
-	    {{- partial "micrometadata.html" . }}
+
+	  {{- range (.Paginate (where .Site.Pages "Section" "micro")).Pages }}
+	  <article class="h-entry">
+		  <div class="e-content p-title">
+		    {{- .Content }}
+		  </div>
+	    {{- partial "micrometadata.html" . }}	  
+	  </article>
 	  {{- end }}
+	  {{ partial "pagination.html" . }}
 	</content>	
 </div>
 {{ partial "footer.html" . }}
