--- a/layouts/section/review.html
+++ b/layouts/section/review.html
@@ -5,11 +5,9 @@
 				<use xlink:href="{{ .Site.BaseURL }}svg/symbol-defs.svg#icon-star-half"></use>
 			</svg>reviews</h1>
 			<div id="#revlist">
+			<article class="h-entry">
 	  {{- range where .Site.Pages "Section" "review" }}
 		  	<h3 class="p-name entry-title"><a href="{{ .Permalink }}">{{ .Title }}</a></h3>
-			  	{{- if .Params.rating }}
-			  	{{ partial "star-rating.html" . }}
-			    {{- end }}
 		    <div class="p-summary">
 			    {{- if .Params.summary }}
 			    {{- .Params.summary }}
@@ -20,6 +18,7 @@
 		    {{ partial "metadata.html" . }}
 	  {{- end }}
 	  		</div>
+	  		</article>
 	</content>
 </div>
 {{ partial "footer.html" . }}
