--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -18,6 +18,16 @@
   {{- if .Params.sorttable }}
   <script type="text/javascript" src="{{ .Site.BaseURL }}js/sorttable.js"></script>
   {{- end }}
+  <!-- Favicons
+    ================================================== -->
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+    <link rel="icon" type="image/png" href="/favicon-32x32.png" sizes="32x32">
+    <link rel="icon" type="image/png" href="/favicon-16x16.png" sizes="16x16">
+    <link rel="manifest" href="/manifest.json">
+    <link rel="mask-icon" href="/ascraeus_icon.svg" color="#367588">
+    <link rel="me" href="mailto:dgold@ascraeus.org">
+    <meta name="theme-color" content="#ffffff">
+
   <!-- CSS
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
 <!--  <link rel="stylesheet" type="text/css" href="{{ .Site.BaseURL }}css/normalize.css"> -->
