--- a/layouts/section/link.html
+++ b/layouts/section/link.html
@@ -1,9 +1,9 @@
 {{ partial "header.html" . }}
 {{ partial "sidebar.html" . }}
 	<content>
-	  <h1><svg class="icon icon-tag">
-				<use xlink:href="{{ .Site.BaseURL }}svg/symbol-defs.svg#icon-tag"></use>
-			</svg>tags</h1>
+	  <h1><svg class="icon icon-link">
+				<use xlink:href="{{ .Site.BaseURL }}svg/symbol-defs.svg#icon-link"></use>
+			</svg>link posts</h1>
 			<div id="#revlist">
 	  {{- range (.Paginate (where .Site.Pages "Section" "link")).Pages }}
 	  		{{- if .Params.link }}
@@ -19,7 +19,7 @@
         {{- else }}
 			<h3>{{ .Title }}</h3>
 		{{- end }}
-			<div class="p-summary">
+			<div>
 		    {{- if .Params.summary }}
 		    {{- .Params.summary }}
 		    {{- else }}
