--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -2,7 +2,7 @@
 		</section>
 	</main>
 	<footer>
-		<p class="feet h-card vcard">{{ .Site.Title }} &copy; <a href={{ .Site.BaseURL }} class="p-name u-url">{{ .Site.Author.name }}</a> <span class="p-nickname">{{ .Site.Author.nick }} 2011-{{ .Now.Format "2006" }} &bull; Licenced under <a href="{{ .Site.BaseURL }}page/licence">CC-BY-NC-SA</a> </p>
+		<p class="feet h-card vcard">{{ .Site.Title }} &copy; <a href={{ .Site.BaseURL }} class="p-name u-url url">{{ .Site.Author.name }}</a> <a class="p-nickname u-email email" rel="me" a href="mailto:dgold@ascraeus.org">{{ .Site.Author.nick }} 2011-{{ .Now.Format "2006" }} &bull; Licenced under <a href="{{ .Site.BaseURL }}page/licence">CC-BY-NC-SA</a> </p>
 	</footer>
 </body>
 </html>
