--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -26,6 +26,7 @@
     <link rel="manifest" href="/manifest.json">
     <link rel="mask-icon" href="/ascraeus_icon.svg" color="#367588">
     <link rel="me" href="mailto:dgold@ascraeus.org">
+    <link rel="author" href="/pages/about/" title="About the author" />
     <meta name="theme-color" content="#ffffff">
 
   <!-- CSS
