--- a/layouts/partials/metadata.html
+++ b/layouts/partials/metadata.html
@@ -16,11 +16,11 @@
 		{{ range .Params.tags }} 
 			<a href="/tags/{{.}}" class="metatag p-category">{{.}}</a>&nbsp;&bull;&nbsp;
 		{{- end}}
-		<a href="{{ .Permalink }}" class="metatag u-url u-uid">
-			<svg class="icon">
+		<a href="{{ .Permalink }}" class="metatag u-url u-uid">Permalink</a>
+		<span  rel="author" class="p-author h-card"><a href="{{ .Site.BaseURL }}" title="Daniel Goldsmith"><svg class="icon">
 				<use xlink:href="{{ .Site.BaseURL }}svg/symbol-defs.svg#icon-ascraeus">
 				</use> 
-			</svg>Permalink</a>&nbsp;&bull;&nbsp;
+			</svg></a></span>&nbsp;&bull;&nbsp;
 		~{{ .ReadingTime }} min read
 	</div>
 	{{- end }}
