small fix for icon

--- a/layouts/partials/metadata.html
+++ b/layouts/partials/metadata.html
@@ -17,7 +17,7 @@
 			<a href="/tags/{{.}}" class="metatag p-category">{{.}}</a>&nbsp;&bull;&nbsp;
 		{{- end}}
 		<a href="{{ .Permalink }}" class="metatag u-url u-uid">Permalink</a>
-		<span  rel="author" class="p-author h-card"><a href="{{ .Site.BaseURL }}" title="Daniel Goldsmith"><svg class="icon">
+		<span  rel="author" class="p-author h-card"><a href="{{ .Site.BaseURL }}" class="metatag" title="Daniel Goldsmith"><svg class="icon">
 				<use xlink:href="{{ .Site.BaseURL }}svg/symbol-defs.svg#icon-ascraeus">
 				</use> 
 			</svg></a></span>&nbsp;&bull;&nbsp;
