--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -6,6 +6,7 @@
 <!-- Basic Page Needs
   ================================================== -->
   <title>{{ .Title }}</title>
+  <meta charset="utf-8" />
   <!-- Mobile Specific Metas
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <meta name="viewport" content="width=device-width, initial-scale=1">
