--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -40,6 +40,9 @@
   {{- if .Site.Author.email }}
   <link rel="me" href="mailto:{{ .Site.Author.email }}" />
   {{- end }}
+  <!-- indieweb components 
+  ------------------------------------------------- -->
+  <link rel="authorization_endpoint" href="https://indieauth.com/auth">
   <link rel="webmention" href="https://webmention.herokuapp.com/api/webmention" />
 </head>
 <body class="Site">
