--- a/layouts/partials/metadata.html
+++ b/layouts/partials/metadata.html
@@ -25,7 +25,7 @@
 				</a>
 			</span>&nbsp;&bull;&nbsp;
 			{{- if .Params.twit }}
-				<a href="{{ .Params.twit }}" class="metatag u-syndication" rel="syndication title="this post was syndicated to twitter">
+				<a href="{{ .Params.twit }}" class="metatag u-syndication" rel="syndication" title="this post was syndicated to twitter">
 					<svg class="icon icon-twitter">
 						<use xlink:href="{{ .Site.BaseURL }}svg/symbol-defs.svg#icon-twitter">
 						</use>
@@ -33,7 +33,7 @@
 				</a>&nbsp;&bull;&nbsp;
 			{{- end }}
 			{{- if .Params.plus }}
-				<a href="{{ .Params.plus }}" class="metatag u-syndication" rel="syndication title="this post was syndicated to googleplus">
+				<a href="{{ .Params.plus }}" class="metatag u-syndication" rel="syndication" title="this post was syndicated to googleplus">
 					<svg class="icon icon-google-plus2">
 						<use xlink:href="{{ .Site.BaseURL }}svg/symbol-defs.svg#icon-google-plus2">
 						</use>
