--- a/layouts/partials/metadata.html
+++ b/layouts/partials/metadata.html
@@ -34,7 +34,7 @@
 			{{- end }}
 			{{- if .Params.plus }}
 				<a href="{{ .Params.plus }}" class="metatag u-syndication" rel="syndication" title="this post was syndicated to googleplus">
-					<svg class="icon icon-google-plus2">
+					<svg class="icon icon-google-plus">
 						<use xlink:href="{{ .Site.BaseURL }}svg/symbol-defs.svg#icon-google-plus2">
 						</use>
 					</svg>
