Micropub experiment begins

--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -44,6 +44,9 @@
   ------------------------------------------------- -->
   <link rel="authorization_endpoint" href="https://indieauth.com/auth" />
   <link rel="webmention" href="https://webmention.herokuapp.com/api/webmention" />
+  <link rel="token_endpoint" href="https://tokens.indieauth.com/token">
+  <link rel="micropub" href="https://micropubascraeus.herokuapp.com/micropub/main">
+  
 
   <!-- Metadata for Twitter and OpenGraph -->
   {{- if .Params.summary }}
