Phew, lots of changes this time.
+ Started process of modularising the inputs
+ Improved handling of micropub-generated posts
+ Included 'mf-syndication' handling

--- a/layouts/article/single.html
+++ b/layouts/article/single.html
@@ -2,7 +2,7 @@
 
 {{ partial "sidebar.html" . }}
 
-	<content>
+	<content>{{"<!-- from article.single //-->" | safeHTML}}
 		<article class="h-entry">
 		  <h1 class="p-name">{{ .Title }}</h1>
 		  {{ partial "metadata.html" . }}
