--- a/layouts/section/article.html
+++ b/layouts/section/article.html
@@ -1,6 +1,6 @@
 {{ partial "header.html" . }}
 {{ partial "sidebar.html" . }}
-	<content>
+	<content>{{"<!-- from section.article.html //-->" | safeHTML}}
 	  <h1><svg class="icon icon-blog">
 				<use xlink:href="{{ .Site.BaseURL }}svg/symbol-defs.svg#icon-blog"></use>
 			</svg>blog posts</h1>
