--- a/layouts/section/link.html
+++ b/layouts/section/link.html
@@ -1,6 +1,6 @@
 {{ partial "header.html" . }}
 {{ partial "sidebar.html" . }}
-	<content>
+	<content>{{"<!-- from section.link.html //-->" | safeHTML}}
 	  <h1><svg class="icon icon-link">
 				<use xlink:href="{{ .Site.BaseURL }}svg/symbol-defs.svg#icon-link"></use>
 			</svg>link posts</h1>
