--- a/layouts/section/review.html
+++ b/layouts/section/review.html
@@ -1,6 +1,6 @@
 {{ partial "header.html" . }}
 {{ partial "sidebar.html" . }}
-	<content>
+	<content>{{"<!-- from section.review.html //-->" | safeHTML}}
 	  <h1><svg class="icon icon-star-half">
 				<use xlink:href="{{ .Site.BaseURL }}svg/symbol-defs.svg#icon-star-half"></use>
 			</svg>reviews</h1>
