--- a/layouts/section/micro.html
+++ b/layouts/section/micro.html
@@ -6,9 +6,10 @@
 			</svg>microblog</h1>
 
 	  {{- range (.Paginate (where .Site.Pages "Section" "micro")).Pages }}
+		<div class="indmicro">	
 		{{ partial "p_microentry.html" . }}
 	    {{- partial "micrometadata.html" . }}	  
-	  </article>
+	  	</div>
 	  {{- end }}
 	  {{ partial "pagination.html" . }}
 	</content>	
