+ include syndication items on microposts

--- a/layouts/partials/micrometadata.html
+++ b/layouts/partials/micrometadata.html
@@ -15,6 +15,22 @@
 					</svg>
 				</a>
 			{{ end }}
+			{{- if .Params.twit }}
+				<a href="{{ .Params.twit }}" class="metatag u-syndication" rel="syndication" title="this post was syndicated to twitter">
+					<svg class="icon icon-twitter">
+						<use xlink:href="{{ .Site.BaseURL }}svg/symbol-defs.svg#icon-twitter">
+						</use>
+					</svg>
+				</a>&nbsp;&bull;&nbsp;
+			{{- end }}
+			{{- if .Params.plus }}
+				<a href="{{ .Params.plus }}" class="metatag u-syndication" rel="syndication" title="this post was syndicated to googleplus">
+					<svg class="icon icon-google-plus">
+						<use xlink:href="{{ .Site.BaseURL }}svg/symbol-defs.svg#icon-google-plus2">
+						</use>
+					</svg>
+				</a>
+			{{- end }}
 </div>
 
 
