+ Added rss feed to headers

--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -32,7 +32,6 @@
 
   <!-- CSS
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-<!--  <link rel="stylesheet" type="text/css" href="{{ .Site.BaseURL }}css/normalize.css"> -->
   <link href="https://fonts.googleapis.com/css?family=Gentium+Basic:400,400i|Open+Sans:400,600,800" rel="stylesheet" />
   <link rel="stylesheet" type="text/css" href="{{ .Site.BaseURL }}css/reproach.css" />
   <link rel="stylesheet" type="text/css" href="{{ .Site.BaseURL }}css/bigfoot-default.css" />
@@ -47,6 +46,11 @@
   <link rel="token_endpoint" href="https://tokens.indieauth.com/token">
   <link rel="micropub" href="https://micropubascraeus.herokuapp.com/micropub/main">
   
+  <!-- rss feeds -->
+  <link rel="alternate" type="application/rss+xml" href="{{ .Site.BaseURL }}index.xml"
+        title="Ascraeus Main Feed">
+  <link rel="alternate" type="application/rss+xml" href="{{ .SiteBaseURL }}micro/updates.atom"      title="Ascraeus Micro Posts">      
+
 
   <!-- Metadata for Twitter and OpenGraph -->
   {{- if .Params.summary }}
