--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -47,9 +47,8 @@
   <link rel="micropub" href="https://micropubascraeus.herokuapp.com/micropub/main">
   
   <!-- rss feeds -->
-  <link rel="alternate" type="application/rss+xml" href="{{ .Site.BaseURL }}index.xml"
-        title="Ascraeus Main Feed">
-  <link rel="alternate" type="application/rss+xml" href="{{ .SiteBaseURL }}micro/updates.atom"      title="Ascraeus Micro Posts">      
+  <link rel="alternate" type="application/rss+xml" href="{{ .Site.BaseURL }}index.xml" title="Ascraeus Main Feed">
+  <link rel="alternate" type="application/rss+xml" href="{{ .SiteBaseURL }}micro/index.xml" title="Ascraeus Micro Posts">      
 
 
   <!-- Metadata for Twitter and OpenGraph -->
