+ Added specific theming to link-post rss feeds

--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -51,8 +51,7 @@
   <link rel="alternate" type="application/rss+xml" title="Ascraeus Main Feed" href="{{ .Site.BaseURL }}index.xml" />
   <link rel="alternate" type="application/rss+xml" title="Ascraeus Micropost Feed" href="{{ .Site.BaseURL }}micro/index.xml" />
   <link rel="self" href="{{ .Site.BaseURL }}" />
-  <link rel="hub" href="http://pubsubhubbub.superfeedr.com/" />
-
+  <link rel="hub" href="https://switchboard.p3k.io/" />
   <!-- Metadata for Twitter and OpenGraph -->
   {{- if .Params.summary }}
   {{ partial "twittergraph.html" . }}
