o Fixes for brid.gy syndication

--- a/layouts/partials/metadata.html
+++ b/layouts/partials/metadata.html
@@ -41,6 +41,7 @@
 				</a>&nbsp;&bull;&nbsp;
 			{{- end }}
 		~{{ .ReadingTime }} min read
+		<a href="https://brid.gy/publish/twitter"></a>
 	</div>
 	{{- end }}
 	
