Made manual webmention Form.

--- a/layouts/article/single.html
+++ b/layouts/article/single.html
@@ -17,8 +17,8 @@
 		</article>
 		
 {{ partial "articlepagination.html" . }}
-
-{{ partial "webmention.html" }} 
+{{ partial "mention.html" . }}
+{{ partial "webmention.html" . }} 
 	</content>
 
 {{ partial "footer.html" . }}
