--- a/layouts/partials/micrometadata.html
+++ b/layouts/partials/micrometadata.html
@@ -13,7 +13,7 @@
 						<use xlink:href="{{ .Site.BaseURL }}svg/symbol-defs.svg#icon-instagram">
 						</use>
 					</svg>
-				</a>
+				</a>&nbsp;&bull;&nbsp;
 			{{ end }}
 			{{- if .Params.twit }}
 				<a href="{{ .Params.twit }}" class="metatag u-syndication" rel="syndication" title="this post was syndicated to twitter">
