--- a/layouts/micro/micropubpost.html
+++ b/layouts/micro/micropubpost.html
@@ -10,6 +10,7 @@
 	    </article>
 
 	{{ partial "articlepagination.html" . }}
+	{{ partial "mention.html" . }}
 	{{- partial "webmention.html" }}
 	</content>
 
