Put the Mention code on links & reviews too.

--- a/layouts/link/single.html
+++ b/layouts/link/single.html
@@ -20,7 +20,8 @@
 		  {{ .Content }}
 		  </div>
 		</article>
-{{ partial "articlepagination.html" . }}
-{{ partial "webmention.html" }}
+	{{ partial "articlepagination.html" . }}
+	{{ partial "mention.html" . }}
+	{{ partial "webmention.html" }}
 	</content>
 {{ partial "footer.html" . }}
