--- a/layouts/review/single.html
+++ b/layouts/review/single.html
@@ -21,6 +21,7 @@
 		</article>
 		
 	{{ partial "articlepagination.html" . }}
+	{{ partial "mention.html" . }}
 	{{ partial "webmention.html" }}
 	</content>
 {{ partial "footer.html" . }}
