--- a/layouts/partials/mention.html
+++ b/layouts/partials/mention.html
@@ -1,4 +1,4 @@
-<div>
+<div class="mention">
 	Have you written a <a href="https://indieweb.org/responses">response</a> to this? Let me know the <abbr title="Uniform Resource Locator">URL</abbr>
 	<form action="https://webmention.herokuapp.com/api/webmention" method="post">
 		<input name="source" placeholder="http://example.com/my-awesome-response" type="url">
