added site identity to opengraph

--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -28,7 +28,7 @@
     <link rel="mask-icon" href="/ascraeus_icon.svg" color="#367588" />
     <link rel="me" href="mailto:dgold@ascraeus.org" />
     <link rel="author" href="/pages/about/" title="About the author" />
-    <meta name="theme-color" content="#ffffff">
+    <meta name="theme-color" content="#f5f5f5">
 
   <!-- CSS
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
