--- a/layouts/partials/twittergraph.html
+++ b/layouts/partials/twittergraph.html
@@ -18,6 +18,7 @@
     <meta property="og:type" content="article" />
     <meta property="og:description" content="{{ .Params.summary }}" />
     <meta property="og:url" content="{{ .Permalink }}" />
+    <meta property="og:site_name" content="View from Ascraeus" />
     {{- if .Params.image }}
     <meta property="og:image" content="{{ .Params.image }}" />
     {{- end }}
